# magsplitpy

./: .gitignore  README.md  environment.yml  mag_GSH_funcs.py  misc_funcs.py  setup.cfg  setup.py  sph_transforms.py  test_spherepy.py
docs/source/: conf.py  index.rst
docs/source/chapters/: magsplitpy.rst
inversion/: analyze_knot_sensitivity.py  rotation_kernel.py
magsplitpy/: Bugnet_field_plot.py  compute_splittings.py  mag_GSH_funcs.py  magkerns.py  misc_funcs.py  rotate_splitting_basis.py  sph_transforms.py  synthetic_B_profiles.py
tests/: test_Bugnet_splitting.py  test_h_construction.py  test_simple_B.py  test_spherepy.py
