[metadata]
# replace with your username:
name = magsplitpy
version = 0.0.1
author = Srijan Bharati Das
author_email = sbdas@princeton.edu
description = Setup configuration of magsplitpy.
long_description = file: README.md
long_description_content_type = text/markdown
url = 
11project_urls =
    Documentation = 
    TravisCI = 
14classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
keywords = Asteroseismology, Spherical Harmonics, 3D Magnetism

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.6
install_requires = numpy
tests_require = pytest
zip_safe = False

[options.extras_require]
docs = 
    sphinx 
    sphinx-rtd-theme
    furo
tests = pytest; py

# [options.entry_points]
# console_scripts =
#     sample-bin = matpy.bins.sample_bin:main

[options.packages.find]
where = .